# Afuzz

./: .gitignore  Makefile  README.md  pyproject.toml
asfuzz/: cli.py  config.py
asfuzz/fuzzer/: __init__.py  coverage.py  grammar.py  mutator.py
asfuzz/lowering/: __init__.py  to_halide.py  to_te.py  to_tir.py
asfuzz/mr/: __init__.py  base.py  mr_algebraic.py  mr_axis_move.py  mr_axis_permute.py  mr_batch_split.py  mr_budget_monotonic.py  mr_decomposition.py  mr_input_scale.py  mr_layout.py  mr_matmul_chain_assoc.py  mr_matmul_transpose.py  mr_pad_slice.py  mr_reduce_split.py  mr_seed_invariance.py  mr_shape_identity.py  registry.py
asfuzz/oracle/: __init__.py  crash.py  numeric.py  timeout.py
asfuzz/reducer/: __init__.py  delta.py  repro.py
asfuzz/reporter/: __init__.py  bug_db.py  html_report.py  triage.py
asfuzz/runner/: __init__.py  pipeline.py  worker.py
asfuzz/schedulers/: __init__.py  ansor_backend.py  autotvm_backend.py  base.py  halide_backend.py  metaschedule_backend.py  numpy_backend.py  registry.py  tvm_backend.py
asfuzz/spec/: __init__.py  einsum.py  ops_catalog.py  opspec.py  reference.py  validate.py
configs/: default.yaml  nightly.yaml  smoke.yaml  strong_smoke.yaml
scripts/: extract_seeds_from_onnx.py  repro_ansor_tanh3.py  run_nightly.sh  run_smoke.sh  triage_bugs.py
tests/: test_cross_backend_oracle.py  test_fuzzer_diversity.py  test_halide_backend.py  test_lowering_tvm.py  test_mr_semantics.py  test_opspec.py  test_oracle_numeric.py  test_reference.py  test_timeout_abort.py
